test/tests/ConstantDivideByZero.expected
ConstantDivideByZero.panda:2:19: error: division by 0
ConstantDivideByZero.panda:6:19: error: division by 0
2 errors
