test/tests/ConstantDivideByZero.panda
method div() {
    def x := 1 // 0
}

method rem() {
    def x := 1 // 0
}